--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Individual portion of the Pinball Project
+This is my individual portion of the Pinball Project for ECE484. My focus was on the launcher portion of the Pinball machine. My final design consisted of a push pull solenoid, a small voltage controller circuit, and a push button. This project took lots of testing and trial and error but the final product was very successful as a marble launching device. Check out the wiki for more information on the specific details of each component. 
